online  page fix

--- a/templates/page/myfriend.html
+++ b/templates/page/myfriend.html
@@ -682,13 +682,13 @@
             <div id="text-12" class="widget_text theme-clear-fix theme-widget theme-layout-column-center-left">
                 <div class="textwidget">
                     <div style="color: white; line-height: 1.5em;">
-                        <p style="font-size: 85%; padding: 0 0 2px;"> <strong> K-2nd</strong></p> 
+                        <p style="padding: 0 0 2px;"> <strong> K-2nd</strong></p> 
                         <a style="font-size: 80%;" href="/online/scratch-jr">Scratch Jr</a><br>
                         <a style="font-size: 80%;" href="/online/minecraft-club">Minecraft Club</a><br>
                         <a style="font-size: 80%;" href="/online/intro-to-coding">3D Video Game Design</a><br>
                         <a style="font-size: 80%;" href="/online/roblox-build">Roblox Build</a><br>
 
-                        <p style="font-size: 85%; padding: 5px 0 2px;"> <strong> 3rd-5nd</strong></p> 
+                        <p style="padding: 5px 0 2px;"> <strong> 3rd-5nd</strong></p> 
                         <a style="font-size: 80%;" href="/online/intermediate-coding">Scratch</a><br>
                         <a style="font-size: 80%;" href="/online/roblox-code">Roblox Code</a><br>
                         <a style="font-size: 80%;" href="/online/web-development">Web Development</a><br>
@@ -699,7 +699,7 @@
                         <a style="font-size: 80%;" href="/online/minecraft-club">Minecraft Club</a><br>
                         <a style="font-size: 80%;" href="/online/roblox-build">Roblox Build</a><br>
 
-                        <p style="font-size: 85%; padding: 5px 0 2px;"> <strong>6th- 8th</strong> </p> 
+                        <p style="padding: 5px 0 2px;"> <strong>6th- 8th</strong> </p> 
                         <a style="font-size: 80%;" href="/online/web-development">Web Development</a><br>
                         <a style="font-size: 80%;" href="/online/advanced-coding">Design with Python</a><br>
                         <a style="font-size: 80%;" href="/online/roblox-code">Roblox Code</a><br>
