online  page fix

--- a/templates/page/myfriend.html
+++ b/templates/page/myfriend.html
@@ -113,7 +113,7 @@
                 </li>
 
                 <li class=" menu-item menu-item-type-post_type menu-item-object-page sf-mega-enable-0  ">
-                    <a href="#"><span></span> FAQ</a>
+                    <a href="#"><span></span> FAQs</a>
                 </li>
 
                 <li class=" menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children sf-mega-enable-0  ">
