online  page fix

--- a/templates/page/quofaq.html
+++ b/templates/page/quofaq.html
@@ -332,47 +332,6 @@
                                 </p>
                             </li>
                         </ol>
-                    </article>
-                    <aside>
-                        <div class="sideBanner">
-                            <div class="sideBanner__down">
-                                <h5 class="h5">
-                                    <strong>
-                                        Other questions: 
-                                    </strong>
-                                </h5>
-                                <ul>
-                                    <li>
-                                        <a href="https://shust-hub.github.io/CA/templates/page/quofaq.html">How are your classes taught?</a>
-                                    </li>
-                                    <li>
-                                        <a href="https://shust-hub.github.io/CA/templates/page/quofaq.html">Do you have LIVE instruction?</a>
-                                        
-                                    </li>
-                                    <li>
-                                        <a href="https://shust-hub.github.io/CA/templates/page/quofaq.html">What are the technical requirements? <br>
-                                            What type of computer does my child need to take class?</a>
-                                    </li>
-                                    <li>
-                                        <a href="https://shust-hub.github.io/CA/templates/page/quofaq.html">Can my child use an iPad/Tablet or Chromebook for class?</a>
-                                    </li>
-                                    <li>
-                                        <a href="https://shust-hub.github.io/CA/templates/page/quofaq.html">How do I use the portal?</a>
-                                    </li>
-                                    <li>
-                                        <a href="https://shust-hub.github.io/CA/templates/page/quofaq.html">Do you offer sibling discounts?</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </aside>
-                </div>
-            </div>
-        </section>
-        <section>
-            <div class="container" style="margin-top: -30px;">
-                <div class="rows">
-                    <article>
                         <div>
                             <div id="techTable">
                                 <table class="table table-responsive">
@@ -469,6 +428,51 @@
                             <p>* Required for Robotics Online: <a href="https://education.lego.com/en-us/products/lego-education-wedo-2-0-core-set/45300" title="Lego WEDO 2.0 kit"  target="_blank">Lego WEDO 2.0 kit </a>
                             </p>
                         </div>
+                    </article>
+                    <aside>
+                        <div class="sideBanner">
+                            <div class="sideBanner__down">
+                                <h5 class="h5">
+                                    <strong>
+                                        Other questions: 
+                                    </strong>
+                                </h5>
+                                <ul>
+                                    <li>
+                                        <a href="https://shust-hub.github.io/CA/templates/page/quofaq.html">How are your classes taught?</a>
+                                    </li>
+                                    <li>
+                                        <a href="https://shust-hub.github.io/CA/templates/page/quofaq.html">Do you have LIVE instruction?</a>
+                                        
+                                    </li>
+                                    <li>
+                                        <a href="https://shust-hub.github.io/CA/templates/page/quofaq.html">What are the technical requirements? <br>
+                                            What type of computer does my child need to take class?</a>
+                                    </li>
+                                    <li>
+                                        <a href="https://shust-hub.github.io/CA/templates/page/quofaq.html">Can my child use an iPad/Tablet or Chromebook for class?</a>
+                                    </li>
+                                    <li>
+                                        <a href="https://shust-hub.github.io/CA/templates/page/quofaq.html">How do I use the portal?</a>
+                                    </li>
+                                    <li>
+                                        <a href="https://shust-hub.github.io/CA/templates/page/quofaq.html">Do you offer sibling discounts?</a>
+                                    </li>
+                                </ul>
+
+                                <a href="">ALL QUESTIONS</a>
+
+                            </div>
+                        </div>
+                    </aside>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="container" style="margin-top: -30px;">
+                <div class="rows">
+                    <article>
+
                     </article>
                 </div>
             </div>
