--- a/css/style7.scss
+++ b/css/style7.scss
@@ -1093,7 +1093,7 @@ aside {
   color: #fff;
 }
 
-.sideBanner li a{
+.sideBanner li a, .sideBanner a{
   color: white;
   text-decoration: none;
 }
