--- a/templates/page/quofaq.html
+++ b/templates/page/quofaq.html
@@ -460,7 +460,7 @@
                                     </li>
                                 </ul>
 
-                                <a href="">ALL QUESTIONS</a>
+                                <a class="mt-middle" href="https://shust-hub.github.io/CA/templates/page/FAQ.html">ALL QUESTIONS</a>
 
                             </div>
                         </div>
