--- a/css/style7.css
+++ b/css/style7.css
@@ -4114,7 +4114,7 @@ aside {
   color: #fff;
 }
 
-.sideBanner li a {
+.sideBanner li a, .sideBanner a {
   color: white;
   text-decoration: none;
 }
