--- a/templates/page/quofaq.html
+++ b/templates/page/quofaq.html
@@ -437,7 +437,7 @@
                                         Other questions: 
                                     </strong>
                                 </h5>
-                                <ul>
+                                <ul  class="mb-middle">
                                     <li>
                                         <a href="https://shust-hub.github.io/CA/templates/page/quofaq.html">How are your classes taught?</a>
                                     </li>
@@ -460,7 +460,7 @@
                                     </li>
                                 </ul>
 
-                                <a class="mt-middle" href="https://shust-hub.github.io/CA/templates/page/FAQ.html">ALL QUESTIONS</a>
+                                <a href="https://shust-hub.github.io/CA/templates/page/FAQ.html">ALL QUESTIONS</a>
 
                             </div>
                         </div>
