--- a/templates/page/myfriend.html
+++ b/templates/page/myfriend.html
@@ -713,6 +713,11 @@
                 <div class="textwidget">
                     <div class="textwidget">
                         <div style="color: white; line-height: 1.5em;">
+                            <a style="font-size: 80%;" href="#">Summer Online Coding Camps </a><br />
+                            <a style="font-size: 80%;" href="#">After School</a><br />
+                            <a style="font-size: 80%;" href="#">Technology and Arts Exploration</a><br />
+                            <a style="font-size: 80%;" href="#">Robotics</a><br />
+                            <a style="font-size: 80%;" href="#">Coding</a><br />
                             <a style="font-size: 80%;" href="/about">About</a><br />
                             <a style="font-size: 80%;" href="/classes">Classes</a><br />
                             <a style="font-size: 80%;" href="/school-programs">School Programs</a><br />
