--- a/templates/page/quofaq.html
+++ b/templates/page/quofaq.html
@@ -460,7 +460,9 @@
                                     </li>
                                 </ul>
 
-                                <a href="https://shust-hub.github.io/CA/templates/page/FAQ.html">ALL QUESTIONS</a>
+                                <strong>
+                                 <a class="mb-middle" href="https://shust-hub.github.io/CA/templates/page/FAQ.html">ALL QUESTIONS</a>   
+                                </strong>
 
                             </div>
                         </div>
