--- a/css/style7.scss
+++ b/css/style7.scss
@@ -1098,7 +1098,7 @@ aside {
   text-decoration: none;
 }
 
-.sideBanner li a:hover{
+.sideBanner li a:hover, .sideBanner li a:hover{
   text-decoration: underline;
 }
 
