--- a/templates/page/quofaq.html
+++ b/templates/page/quofaq.html
@@ -460,9 +460,9 @@
                                     </li>
                                 </ul>
 
-                                <strong>
-                                 <a class="mb-middle" href="https://shust-hub.github.io/CA/templates/page/FAQ.html">ALL QUESTIONS</a>   
-                                </strong>
+                                <h6 class="h5">
+                                 <a class="mb-middle" href="https://shust-hub.github.io/CA/templates/page/FAQ.html">ALL QUESTIONS &rarr;</a>   
+                                </h6>
 
                             </div>
                         </div>
