--- a/templates/page/quofaq.html
+++ b/templates/page/quofaq.html
@@ -460,12 +460,10 @@
                                     </li>
                                 </ul>
 
-                                <strong>
-                                <h6 class="h5">
-                                 <a class="mb-middle" href="https://shust-hub.github.io/CA/templates/page/FAQ.html">ALL QUESTIONS &rarr;</a>   
+                                <h6 class="h5" style="font-weight: bold;">
+                                 <a class="mb-middle"  href="https://shust-hub.github.io/CA/templates/page/FAQ.html">ALL QUESTIONS &rarr;</a>   
                                 </h6>
-                                </strong>
-                                
+
                             </div>
                         </div>
                     </aside>
