--- a/templates/page/onlinerobotics.html
+++ b/templates/page/onlinerobotics.html
@@ -334,6 +334,9 @@
                         <p>
                             Your kids will love our LEGO ® – based robotics classes – all designed by a robotic controls engineer with a background in aerospace and physics.
                         </p>
+                        <p>
+                            * These are recommended age ranges. We can adjust based on your child’s needs and abilities. 
+                        </p>
                     </article>
                     <aside>
 
