--- a/templates/page/onlinerobotics.html
+++ b/templates/page/onlinerobotics.html
@@ -335,7 +335,7 @@
                             Your kids will love our LEGO ® – based robotics classes – all designed by a robotic controls engineer with a background in aerospace and physics.
                         </p>
                         <p>
-                            * These are recommended age ranges. We can adjust based on your child’s needs and abilities. 
+                            *These are recommended age ranges. We can adjust based on your child’s needs and abilities. 
                         </p>
                     </article>
                     <aside>
@@ -370,13 +370,14 @@
                 </div>
                 <div class="rows">
                     <article>
-                        <h3 class="h3 mb-middle">For 3rd-5th graders:</h3>
+                        <h3 class="h3">Select from the following Robotics Online Classes for Kids</h3>
+                        <h4 class="h4 mb-middle">For 3rd-5th graders:</h4>
                         <div class="textWithImgBlock mb-middle">
                             <div class="imgWithCaptionBlock">
                                 <img src="/CA/uploads/robotics-earthbots-600-1.jpg" alt="Earthbot Engineers"/>
                             </div>
                             <div class="textWithImgBlock__text">
-                                <h4 class="h4">Earthbot Engineers</h4>
+                                <h5 class="h5">Earthbot Engineers</h5>
                                 <p>
                                     Using LEGO ® robotics, students will learn about some of the coolest environments on the planet. They’ll create and program robots to: withstand the heat of volcanoes and avoid lava, have just the right amount of friction to pull their way up steep and snowy mountains, withstand the pressure of the ocean as they raise a periscope from its darkest depths, and more.
                                 </p>
