--- a/templates/page/onlinerobotics.html
+++ b/templates/page/onlinerobotics.html
@@ -312,7 +312,7 @@
             <div class="container">
                 <div class="rows">
                     <article>
-                        <h3 class="h3">Robotics Online Classes</h3>
+                        <h3 class="h3 mb-middle">Robotics Online Classes</h3>
                         <h5 class="h5">Grades: 3rd-5th,  6th-8th</h5>
                         <h5 class="h5 mb-middle">Ages: 8-10*, 10-13*</h5>                        
                         <p>
@@ -370,7 +370,7 @@
                 </div>
                 <div class="rows">
                     <article>
-                        <h2 class="h2">Select from the following Robotics Online Classes for Kids</h2>
+                        <h2 class="h2 mb-middle">Select from the following Robotics Online Classes for Kids</h2>
                         <h3 class="h3 mb-middle">For 3rd-5th graders:</h3>
                         <div class="textWithImgBlock mb-middle">
                             <div class="imgWithCaptionBlock">
