--- a/templates/page/onlinerobotics.html
+++ b/templates/page/onlinerobotics.html
@@ -312,7 +312,7 @@
             <div class="container">
                 <div class="rows">
                     <article>
-                        <h3 class="h3 mb-middle">Robotics Online Classes</h3>
+                        <h3 class="h3">Robotics Online Classes</h3>
                         <h5 class="h5">Grades: 3rd-5th,  6th-8th</h5>
                         <h5 class="h5 mb-middle">Ages: 8-10*, 10-13*</h5>                        
                         <p>
@@ -321,7 +321,7 @@
                             as <a href="https://shust-hub.github.io/CA/templates/page/myfriend.html">My Friends Online</a>  or <a href="https://shust-hub.github.io/CA/templates/page/privateclasses.html">Private Coding</a>.
                         </p>
                         <p> <strong> Required for class: Computer (desktop or laptop) and you MUST use a
-                             <a href="https://education.lego.com/en-us/products/lego-education-wedo-2-0-core-set/45300" title="Lego WEDO 2.0 kit"  target="_blank">Lego WEDO 2.0 kit </a> (One kit can be used by 1-2 learners and costs $215)
+                             <a href="https://education.lego.com/en-us/products/lego-education-wedo-2-0-core-set/45300" title="Lego WeDo 2.0 kit"  target="_blank">Lego WeDo 2.0 kit </a> (One kit can be used by 1-2 learners and costs $215)
                         </strong>
                         </p>
                         <p>
@@ -438,7 +438,13 @@
                 </div>
                 <div class="rows">
                     <article>
-                        <div class="pb-text" id="roboticsTable">
+                        <p>
+                            We don’t have any scheduled, group classes for our Robotics Online 
+                            Classes. Please <a title="Flexible Online Coding Classes" href="https://www.surveymonkey.com/r/codeadvantage">contact us</a>  to schedule a 
+                            private/semi-private class or <a title="My Friends" href="https://shust-hub.github.io/CA/templates/page/myfriend.html"> <i>My Friends</i>  Online class</a> 
+                            to these pages.
+                        </p>
+                        <div id="roboticsTable">
                                 <div id="responsiveTable">
                                 <table style="width: 100%;" class="table table-responsive">
                                     <thead>
@@ -465,7 +471,7 @@
                                                     </strong>
                                                 </a>                                                                                                                               
                                                 <div style="font-size: 12px; color: #707070; font-weight: bold;">
-                                                    Required: <a href="https://education.lego.com/en-us/products/lego-education-wedo-2-0-core-set/45300" title="Lego WEDO 2.0 kit"  target="_blank">Lego WEDO 2.0 kit </a>
+                                                    Required: <a href="https://education.lego.com/en-us/products/lego-education-wedo-2-0-core-set/45300" title="Lego WEDO 2.0 kit"  target="_blank">Lego WeDo 2.0 kit </a>
                                                 </div>                                            </td>
                                             <td data-title="Grade level">3rd-5th</td>       
                                             <td data-title="Price">
@@ -473,10 +479,10 @@
                                             </td>
                                             <td>  
                                                 <div class="pb-button pb-button-size-small">
-                                                    <a href="https://shust-hub.github.io/CA/templates/page/myfriend.html" class="pb-window-target-self" 
-                                                    data-id="">
+                                                    <a title="Flexible Online Coding Classes" href="https://www.surveymonkey.com/r/codeadvantage">
                                                         <span class="pb-button-box">
-                                                            <span class="pb-button-content">Contact Us</span>
+                                                            <span class="pb-button-content">
+                                                                Contact Us</span>
                                                         </span>
                                                     </a>
                                                 </div>
@@ -504,8 +510,7 @@
                                             </td>
                                             <td>
                                                 <div class="pb-button pb-button-size-small">
-                                                    <a href="https://shust-hub.github.io/CA/templates/page/myfriend.html" class="pb-window-target-self" 
-                                                    data-id="">
+                                                    <a title="Flexible Online Coding Classes" href="https://www.surveymonkey.com/r/codeadvantage">
                                                         <span class="pb-button-box">
                                                             <span class="pb-button-content">Contact Us</span>
                                                         </span>
@@ -533,8 +538,7 @@
                                             </td>
                                             <td>
                                                 <div class="pb-button pb-button-size-small">
-                                                    <a href="https://shust-hub.github.io/CA/templates/page/privateclasses.html" class="pb-window-target-self" 
-                                                >
+                                                    <a title="Flexible Online Coding Classes" href="https://www.surveymonkey.com/r/codeadvantage" >
                                                         <span class="pb-button-box">
                                                             <span class="pb-button-content">Contact Us</span>
                                                         </span>
@@ -550,7 +554,7 @@
                                                     <strong class="class-name" style="color: #4ccef0;">Private Class </strong>
                                                 </a>
                                                 <div style="font-size: 12px; color: #707070; font-weight: bold;">
-                                                    Required: <a href="https://education.lego.com/en-us/products/lego-education-wedo-2-0-core-set/45300" title="Lego WEDO 2.0 kit"  target="_blank">Lego WEDO 2.0 kit </a>
+                                                    Required: <a href="https://education.lego.com/en-us/products/lego-education-wedo-2-0-core-set/45300" title="Lego WEDO 2.0 kit"  target="_blank">Lego WeDo 2.0 kit </a>
                                                 </div>                                            </td>
                                             <td data-title="Grade level">6th-8th</td>
                                             <td data-title="Price">
@@ -558,8 +562,7 @@
                                             </td>
                                             <td>
                                                 <div class="pb-button pb-button-size-small">
-                                                    <a href="https://shust-hub.github.io/CA/templates/page/privateclasses.html" class="pb-window-target-self" 
-                                                    data-id="">
+                                                    <a title="Flexible Online Coding Classes" href="https://www.surveymonkey.com/r/codeadvantage">
                                                         <span class="pb-button-box">
                                                             <span class="pb-button-content">Contact Us</span>
                                                         </span>
