--- a/templates/page/onlinerobotics.html
+++ b/templates/page/onlinerobotics.html
@@ -440,8 +440,8 @@
                     <article>
                         <p>
                             We don’t have any scheduled, group classes for our Robotics Online 
-                            Classes. Please <a title="Flexible Online Coding Classes" href="https://www.surveymonkey.com/r/codeadvantage">contact us</a>  to schedule a 
-                            private/semi-private class or <a title="My Friends" href="https://shust-hub.github.io/CA/templates/page/myfriend.html"> <i>My Friends</i>  Online class</a> 
+                            Classes. Please <a title="Flexible Online Coding Classes" target="_blank" href="https://www.surveymonkey.com/r/codeadvantage">contact us</a>  to schedule a 
+                            private/semi-private class or <a title="My Friends" target="_blank" href="https://shust-hub.github.io/CA/templates/page/myfriend.html"> <i>My Friends</i>  Online class</a> 
                             to these pages.
                         </p>
                         <div id="roboticsTable">
@@ -479,7 +479,7 @@
                                             </td>
                                             <td>  
                                                 <div class="pb-button pb-button-size-small">
-                                                    <a title="Flexible Online Coding Classes" href="https://www.surveymonkey.com/r/codeadvantage">
+                                                    <a title="Flexible Online Coding Classes" target="_blank" href="https://www.surveymonkey.com/r/codeadvantage">
                                                         <span class="pb-button-box">
                                                             <span class="pb-button-content">
                                                                 Contact Us</span>
@@ -501,7 +501,7 @@
                                                     </strong>
                                                 </a>
                                                 <div style="font-size: 12px; color: #707070; font-weight: bold;">
-                                                    Required: <a href="https://education.lego.com/en-us/products/lego-education-wedo-2-0-core-set/45300" title="Lego WEDO 2.0 kit"  target="_blank">Lego WEDO 2.0 kit </a>
+                                                    Required: <a href="https://education.lego.com/en-us/products/lego-education-wedo-2-0-core-set/45300" title="Lego WEDO 2.0 kit"  target="_blank">Lego WeDo 2.0 kit </a>
                                                 </div>
                                             </td>
                                             <td data-title="Grade level">6th-8th</td>
@@ -510,7 +510,7 @@
                                             </td>
                                             <td>
                                                 <div class="pb-button pb-button-size-small">
-                                                    <a title="Flexible Online Coding Classes" href="https://www.surveymonkey.com/r/codeadvantage">
+                                                    <a title="Flexible Online Coding Classes" target="_blank" href="https://www.surveymonkey.com/r/codeadvantage">
                                                         <span class="pb-button-box">
                                                             <span class="pb-button-content">Contact Us</span>
                                                         </span>
@@ -529,7 +529,7 @@
                                                     </strong>
                                                  </a>
                                                 <div style="font-size: 12px; color: #707070; font-weight: bold;">
-                                                    Required: <a href="https://education.lego.com/en-us/products/lego-education-wedo-2-0-core-set/45300" title="Lego WEDO 2.0 kit"  target="_blank">Lego WEDO 2.0 kit </a>
+                                                    Required: <a href="https://education.lego.com/en-us/products/lego-education-wedo-2-0-core-set/45300" title="Lego WEDO 2.0 kit"  target="_blank">Lego WeDo 2.0 kit </a>
                                                 </div>
                                             </td>
                                             <td data-title="Grade level">3rd-5th</td>
@@ -538,7 +538,7 @@
                                             </td>
                                             <td>
                                                 <div class="pb-button pb-button-size-small">
-                                                    <a title="Flexible Online Coding Classes" href="https://www.surveymonkey.com/r/codeadvantage" >
+                                                    <a title="Flexible Online Coding Classes" target="_blank" href="https://www.surveymonkey.com/r/codeadvantage" >
                                                         <span class="pb-button-box">
                                                             <span class="pb-button-content">Contact Us</span>
                                                         </span>
@@ -562,7 +562,7 @@
                                             </td>
                                             <td>
                                                 <div class="pb-button pb-button-size-small">
-                                                    <a title="Flexible Online Coding Classes" href="https://www.surveymonkey.com/r/codeadvantage">
+                                                    <a title="Flexible Online Coding Classes" target="_blank"  href="https://www.surveymonkey.com/r/codeadvantage">
                                                         <span class="pb-button-box">
                                                             <span class="pb-button-content">Contact Us</span>
                                                         </span>
