--- a/templates/page/myfriend.html
+++ b/templates/page/myfriend.html
@@ -99,9 +99,9 @@
                         <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
                             <a href="https://www.codeadvantage.org/classes/age"><span></span> Classes by Age </a>
                         </li> 
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
+                        <!-- <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
                             <a href="https://www.codeadvantage.org/online/summer-online-coding-camps-for-kids"><span></span>Summer Online Coding Camps </a>
-                        </li> 
+                        </li>  -->
                         <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
                             <a href="https://shust-hub.github.io/CA/templates/page/onlinenew.html"><span></span>Take a Free Trial </a>
                         </li> 
@@ -717,7 +717,7 @@
                 <div class="textwidget">
                     <div class="textwidget">
                         <div style="color: white; line-height: 1.5em;">
-                            <!-- <a style="font-size: 80%;" href="#">Summer Online Coding Camps </a><br /> -->
+                            <a style="font-size: 80%;" href="#">Summer Online Coding Camps </a><br />
                             <a style="font-size: 80%;" href="#">After School</a><br />
                             <a style="font-size: 80%;" href="#"> Afterschool Technology and Arts Exploration</a><br />
                             <a style="font-size: 80%;" href="#"> Afterschool Robotics</a><br />
