--- a/css/main.scss
+++ b/css/main.scss
@@ -75,7 +75,7 @@
 }
 
 .pb-menu .pb-menu-default>.sf-menu>li>a {
-  padding: 10px 10px 15px 10px;
+  padding: 10px 10px 15px 10px!important;
 }
 
 //////////////////////////////
